# 1-enoch-osis

./: 1-enoch-new.xml  1-enoch.xml  2-enoch.xml  4-maccabees.xml  README.md  pdf.py  pyproject.toml  scrape_fbe.py  scrape_sacred_texts.py  testaments-twelve-patriarchs.xml
documents/: 1-enoch.xml  jasher.xml  jubilees.xml
src/1_enoch_osis/: __init__.py  cli.py  http_client.py  osis_parsing.py  scrape_fbe.py  scrape_jasher.py  scrape_jubilees.py  scrape_sacred_texts.py  scrape_vita_adae_et_evae.py
tests/: test_cli.py  test_scrape_fbe_snapshot.py  test_scrape_jasher_snapshot.py  test_scrape_jubilees_snapshot.py  test_scrape_sacred_texts_snapshot.py  test_scrape_vita_adae_et_evae_snapshot.py  test_verse_splitting.py
