[project]
name = "1-enoch-osis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "andrew@protopia.ai" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fire",
    "httpx>=0.28.1",
    "pydantic-settings>=2.4.0",
    "pyosis>=0.2.1",
    "tqdm>=4.67.3",
]

[project.scripts]
scrape = "1_enoch_osis.cli:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
